<resources>
    <string name="app_name">IoTMan</string>
    <string name="title_devices">Urządzenia</string>
    <string name="title_sensors">Sensory</string>
    <string name="title_settings">Ustawienia</string>
    <string name="title_admin">Tryb programisty</string>

    <string name="connect">Połącz</string>
    <string name="delete">Usuń</string>
    <string name="disconnect">Rozłącz</string>
    <string name="add">Dodaj</string>

    <string name="inHint">Polecenie:</string>
    <string name="adminSwitch">Tryb administratora</string>
    <string name="logSwitch">Zapisuj logi</string>

    <string name="label1">Id</string>
    <string name="label2">Nazwa</string>
    <string name="label3">Protokół</string>
    <string name="label4">Status</string>
    <string name="label5">Wybór</string>

    <string name="sensor1">Id urządzenia</string>
    <string name="sensor2">Nazwa</string>
    <string name="sensor3">Odczyt</string>
</resources>
