<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.pz.iotmanager.ui.devices.DeviceFragment"
        android:label="@string/title_devices"
        tools:layout="@layout/fragment_devices" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.pz.iotmanager.ui.sensors.SensorsFragment"
        android:label="@string/title_sensors"
        tools:layout="@layout/fragment_sensors" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.pz.iotmanager.ui.settings.SettingsFragment"
        android:label="@string/title_settings"
        tools:layout="@layout/fragment_settings" />
</navigation>
