<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.sensors.SensorsFragment">

    <ScrollView
        android:id="@+id/sensorsScroll"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#ffffff"
            android:shrinkColumns="*"
            android:stretchColumns="*"
            android:id="@+id/main_table"
            app:layout_constraintBottom_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TableRow
                android:id="@+id/tableRow1"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/Label1"
                    android:layout_weight="1"
                    android:background="@color/colorPrimaryDark"
                    android:gravity="center"
                    android:padding="4dp"
                    android:text="@string/sensor1"
                    android:textColor="@color/colorText" />

                <TextView
                    android:id="@+id/Label2"
                    android:layout_marginLeft="1dp"
                    android:layout_weight="1"
                    android:background="@color/colorPrimaryDark"
                    android:gravity="center"
                    android:padding="4dp"
                    android:text="@string/sensor2"
                    android:textColor="@color/colorText" />

                <TextView
                    android:id="@+id/Label3"
                    android:layout_marginLeft="1dp"
                    android:layout_weight="1"
                    android:background="@color/colorPrimaryDark"
                    android:gravity="center"
                    android:padding="4dp"
                    android:text="@string/sensor3"
                    android:textColor="@color/colorText" />

            </TableRow>

        </TableLayout>
    </ScrollView>

    <LinearLayout
        android:id="@+id/buttonLayout"
        android:layout_width="405dp"
        android:layout_height="50dp"
        android:layout_marginStart="1dp"
        android:layout_marginBottom="50dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sensorsScroll">

        <Button
            android:id="@+id/readButton"
            android:onClick="onRead"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/colorAccent"
            android:text="Odczyt"
            android:textColor="@color/colorPrimaryDark" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>